# scenario-generator

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  overwrite_project_name.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build_on_push_develop.yml  deploy_aces_platform_project_example.yml  deploy_aces_platform_project_example_dev.yml  lint.yml
docs/: README.md
evacuation_training/08　水道局からの状況付与等/: ~$【作業用】災害訓練タイムライン.xlsx
evacuation_training/枚方市地名一覧/: output.csv
output/: scenario.csv
sandbox/scripts/: evacuation_training_scenario.py  state.py  test.py
server/: .dockerignore  .gitignore  Dockerfile  README.md  exceptions.py  nginx.conf  pyproject.toml  root.py  sagemaker.py  serve  setup.cfg  tasks.py  wsgi.py
server/algorithms/: algorithm.json  example_file_algorithm.py  example_file_batch_algorithm.py  example_simple_algorithm.py  register.json
server/domain/: predict_domain.py
server/infra/configs/: aces-platform-project-example-dev-algorithm-server-infra.yml  aces-platform-project-example-staging-algorithm-server-infra.yml  template-dev-algorithm-server-infra.yml  template-production-algorithm-server-infra.yml  template-staging-algorithm-server-infra.yml
server/infra/deploy/: README.md  deploy.py  model.py  pyproject.toml  register.py
server/infra/initial_setup/: .gitignore  README.md  app.py  pyproject.toml
server/infra/initial_setup/infra/: infra_stack.py
server/infra/initial_setup/infra/resources/: iam.py  vpc.py
server/infra/initial_setup/service/: service_stack.py
server/infra/initial_setup/service/lambda/: lambda_function.py
server/infra/initial_setup/service/resources/: batch.py  codebuild.py  compute_resource.py  s3_lambda.py
server/infra/initial_setup/store/: store_stack.py
server/profiling/: __init__.py  gpu_info.py  mem_info.py
server/services/: aws.py  content_handler.py  predict_service.py  utils.py
server/tests/: test_predict_service.py
