[tool.poetry]
name = "scenario-generator"
version = "0.2.3"
description = "scenario-generator created by ACES."
authors = ["{authors of this repository}"]
repository = "https://github.com/koki-asami/senario-generator.git"
# If you want to use project repository as package.
# packages = [{ include = "project_scenario-generator" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
japanize_matplotlib = "*"
langchain = "*"
numpy = "1.23.3"
opencv-contrib-python-headless = "*"
pandas = "*"
Pillow = "*"
PyYAML = "*"
scikit-learn = ">=0.23.1"
tqdm = "*"
xlrd = "*"

[tool.poetry.dev-dependencies]
add-trailing-comma = "*"
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
pep8-naming = "*"
pyproject-flake8 = "*"
# registers = {git = "ssh://git@github.com/aces-inc/registers.git", tag = "v1.1.4" }
seaborn = "*"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
  "*/__init__.py",
  "*/.venv/*",
  "server/wsgi.py",
  "server/infra/*",
]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
