[tool.poetry]
name = "scenario-generator"
version = "0.2.3"
description = "scenario-generator created by ACES."
authors = ["{authors of this repository}"]
repository = "https://github.com/koki-asami/senario-generator.git"
# If you want to use project repository as package.
# packages = [{ include = "project_scenario-generator" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "*"
pandas = "*"
PyYAML = "*"
scipy = "*"
scikit-learn = "*"
tensorboard = "*"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.10.2%2Bcu111-cp38-cp38-linux_x86_64.whl", python = ">=3.8,<3.9"}
tqdm = "*"
mecab-python3 = "0.996.5"
ja-ginza = ">=5.1.0"
blis = ">=0.7.5"
wikipedia2vec = "1.0.5"
suji = ">=0.1.0"
ja-ginza-electra = ">=5.1.0"
spacy-transformers = ">=1.1.8"
japanize-matplotlib = "^1.1.3"
evaluate = "^0.2.2"
sumeval = "<0.2.2"
sentencepiece = "<0.1.97"
openpyxl = "^3.0.10"
fugashi = ">=1.2.0"
ipadic = ">=1.0.0"
transformers = ">=4.21.0"
openai = "*"
unidic-lite = "*"
langchain = "0.0.201"
sentence-transformers = "*"
tiktoken = "*"
pydantic = "1.10.9"
annoy = "*"

[tool.poetry.dev-dependencies]
add-trailing-comma = "*"
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
pep8-naming = "*"
pyproject-flake8 = "*"
# registers = {git = "ssh://git@github.com/aces-inc/registers.git", tag = "v1.1.4" }
seaborn = "*"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
  "*/__init__.py",
  "*/.venv/*",
  "server/wsgi.py",
  "server/infra/*",
]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
